--- a/pag1.html
+++ b/pag1.html
@@ -20,6 +20,7 @@
                     <th>Cognome Prop</th>
                     <th>Data Ns</th>
                     <th>Visita</th>
+                    <th>Anno</th>
                 </tr>
             </table>
         </div>
